infrastructure/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - longhorn.ynoacamino.me
      secretName: longhorn-tls

  rules:
    - host: longhorn.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
